{v1.8b}
 + Added `lift_motor.setPower(liftPower);` on line 164 of <TestOpModeTele.java>
 + Removed line 158 of <TestOpModeTele.java> : `liftPower = gamepad1.left_trigger;`

[1/6/2019]
{V.(T, A): (1.8c, 1.0b)}
 + Added V.java for dynamic and easy version control.
 + Split updates into two categories of versions: TeleOp version and Autonomous version.
 + Added back wheel motors for the autonomous program.
{V.(T, A): (1.8c, 1.0c)}
 + Reversed the Pushbot motors to make our robot go the ***right direction***

[1/7/2019]
{V.(T, A): (1.9a, 1.0c)}
 + Added hook and intake motors (left_arm, lift_arm)
 - Removed left_hand and right_hand servos due to design changes
 + Added hook based off of dpad_up and dpad_down, dynamic.
 + Added intake based off of dpad_right input, toggle.
{V.(T, A): (1.9b, 1.0c)}
 ~ Hotfixed the intake toggle bug
{V.(T, A): (1.9c, 1.0c)}
 ~ Changed controls of intake to left and right bumpers, out and in, respectively
 + Added lowering of lift motor with left trigger
 ~ Changed hook up to quarter power for stability
{V.(T, A): (2.0a, 1.0c)}
 + Split main functionality between 2 controllers, the first doing the driving, the second doing other tasks
 + Added override/unlocked controller capabilities so one controller can do all tasks if necessary.
 ~ Fine tuned power settings, adjustments, and logic cases.
{V.(T, A): (2.0b, 1.0c)}
 + Added .5 second wait time for intake toggling.
{V.(T, A): (2.0c, 1.0c)}
 ~ Fixed error in compiling dealing with <hookPower>

[1/14/19]
{V.(T, A): (2.0d, 1.0c)}
 ~ Fixed the toggle glitch with the hook.
 ~ Changed power to full both ways with the hook.

[1/18/19]
{V.(T, A): (2.1a, 1.0c)}
 ~ Changed intake controls to be a on-demand function, rather than a toggle.
 - Removed old intake code.
{V.(T, A): (2.1b, 1.0c)}
 ~ Changed the lift motor code to fix a bug in which it wouldn't respond
{V.(T, A): (2.1c, 1.0c)}
 ~ Second attempt at fixing the bug of the lift motor not working correctly