@@ -114,21 +114,21 @@ public class PushbotTeleopPOV_Linear extends LinearOpMode {
             robot.rightClaw.setPosition(robot.MID_SERVO - clawOffset);
 
             // Use gamepad buttons to move arm up (Y) and down (A)
-            if (gamepad1.y)
-                robot.leftArm.setPower(robot.ARM_UP_POWER);
-            else if (gamepad1.a)
-                robot.leftArm.setPower(robot.ARM_DOWN_POWER);
-            else
-                robot.leftArm.setPower(0.0);
+            if (gamepad1.y) return;
+                //robot.leftArm.setPower(robot.ARM_UP_POWER);
+            else if (gamepad1.a) return;
+                //robot.leftArm.setPower(robot.ARM_DOWN_POWER);
+            else return;
+                //robot.leftArm.setPower(0.0);
 
             // Send telemetry message to signify robot running;
-            telemetry.addData("claw",  "Offset = %.2f", clawOffset);
-            telemetry.addData("left",  "%.2f", left);
-            telemetry.addData("right", "%.2f", right);
-            telemetry.update();
+            //telemetry.addData("claw",  "Offset = %.2f", clawOffset);
+            //telemetry.addData("left",  "%.2f", left);
+            //telemetry.addData("right", "%.2f", right);
+            //telemetry.update();
 
             // Pace this loop so jaw action is reasonable speed.
-            sleep(50);
+            //sleep(50);
         }
     }
 }
