@@ -1,0 +1,316 @@
+/* Copyright (c) 2017 FIRST. All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without modification,
+ * are permitted (subject to the limitations in the disclaimer below) provided that
+ * the following conditions are met:
+ *
+ * Redistributions of source code must retain the above copyright notice, this list
+ * of conditions and the following disclaimer.
+ *
+ * Redistributions in binary form must reproduce the above copyright notice, this
+ * list of conditions and the following disclaimer in the documentation and/or
+ * other materials provided with the distribution.
+ *
+ * Neither the name of FIRST nor the names of its contributors may be used to endorse or
+ * promote products derived from this software without specific prior written permission.
+ *
+ * NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
+ * LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+ * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+ * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+ * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+package org.firstinspires.ftc.teamcode;
+
+import com.qualcomm.robotcore.eventloop.opmode.Autonomous;
+import com.qualcomm.robotcore.eventloop.opmode.Disabled;
+import com.qualcomm.robotcore.eventloop.opmode.LinearOpMode;
+import com.qualcomm.robotcore.hardware.DcMotor;
+import com.qualcomm.robotcore.util.ElapsedTime;
+import org.firstinspires.ftc.teamcode.V.version;
+
+import org.firstinspires.ftc.robotcontroller.external.samples.HardwarePushbot;
+
+/**
+ * This file illustrates the concept of driving a path based on encoder counts.
+ * It uses the common Pushbot hardware class to define the drive on the robot.
+ * The code is structured as a LinearOpMode
+ *
+ * The code REQUIRES that you DO have encoders on the wheels,
+ *   otherwise you would use: PushbotAutoDriveByTime;
+ *
+ *  This code ALSO requires that the drive Motors have been configured such that a positive
+ *  power command moves them forwards, and causes the encoders to count UP.
+ *
+ *   The desired path in this example is:
+ *   - Drive forward for 48 inches
+ *   - Spin right for 12 Inches
+ *   - Drive Backwards for 24 inches
+ *   - Stop and close the claw.
+ *
+ *  The code is written using a method called: encoderDrive(speed, leftInches, rightInches, timeoutS)
+ *  that performs the actual movement.
+ *  This methods assumes that each movement is relative to the last stopping place.
+ *  There are other ways to perform encoder based moves, but this method is probably the simplest.
+ *  This code uses the RUN_TO_POSITION mode to enable the Motor controllers to generate the run profile
+ *
+ * Use Android Studios to Copy this Class, and Paste it into your team's code folder with a new name.
+ * Remove or comment out the @Disabled line to add this opmode to the Driver Station OpMode list
+ */
+
+@Autonomous(name="Autonomous Model", group="Pushbot")
+//@Disabled
+public class AutonomousModel extends LinearOpMode {
+
+    /* Declare OpMode members. */
+    HardwarePushbot         robot   = new HardwarePushbot();   // Use a Pushbot's hardware
+    private ElapsedTime     runtime = new ElapsedTime();
+
+    static final double     COUNTS_PER_MOTOR_REV    = 1440 ;    // eg: TETRIX Motor Encoder
+    static final double     DRIVE_GEAR_REDUCTION    = 2.0 ;     // This is < 1.0 if geared UP
+    static final double     WHEEL_DIAMETER_INCHES   = 4.0 ;     // For figuring circumference
+    static final double     COUNTS_PER_INCH         = (COUNTS_PER_MOTOR_REV * DRIVE_GEAR_REDUCTION) /
+            (WHEEL_DIAMETER_INCHES * Math.PI);
+    static final double     DRIVE_SPEED             = 1.0;
+    static final double     TURN_SPEED              = 1.0;
+
+    @Override
+    public void runOpMode() {
+
+        /*
+         * Initialize the drive system variables.
+         * The init() method of the hardware class does all the work here
+         */
+        robot.init(hardwareMap);
+
+        // Send telemetry message to signify robot waiting;
+        telemetry.addData("Status", "Resetting Encoders");
+        telemetry.update();
+
+        robot.leftDrive.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.rightDrive.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.leftBackDrive.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.rightBackDrive.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.liftMotor.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.hook.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+        robot.intake.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
+
+        robot.leftDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.rightDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.leftBackDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.rightBackDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.liftMotor.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.hook.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        robot.intake.setMode(DcMotor.RunMode.RUN_WITHOUT_ENCODER);
+
+        // Send telemetry message to indicate successful Encoder reset
+        telemetry.addData("Path0",  "Starting at F:%7d :%7d , B:%7d :%7d",
+                robot.leftDrive.getCurrentPosition(),
+                robot.rightDrive.getCurrentPosition(),
+                robot.leftBackDrive.getCurrentPosition(),
+                robot.rightBackDrive.getCurrentPosition());
+        telemetry.update();
+
+        // Wait for the game to start (driver presses PLAY)
+        waitForStart();
+
+        // Step through each leg of the path,
+        // Note: Reverse movement is obtained by setting a negative distance (not speed)
+        /*
+        encoderDrive(DRIVE_SPEED,  48,  48, 5.0);  // S1: Forward 48 Inches with 5 Sec timeout
+        encoderDrive(TURN_SPEED,   12,  -12,4.0);  // S2: Turn Right 12 Inches with 4 Sec timeout
+        encoderDrive(DRIVE_SPEED,  -24, -24,4.0);  // S3: Reverse 24 Inches with 4 Sec timeout
+        encoderDrive(TURN_SPEED,   -12, 12, 4.0);  // S4: Turn Left 12 Inches with 4 Sec timeout
+
+        robot.leftClaw.setPosition(1.0);            // S5: Stop and close the claw.
+        robot.rightClaw.setPosition(0.0);
+        */
+        movement(); //Basic movement function to test all ranges of motion
+        sleep(5000);
+        movement(); // Repeat
+        sleep(1000);     // pause for servos to move
+        hookUp();
+        sleep(5000);
+        hookDown();
+        sleep(1000);
+        intakeOn(2);
+        sleep(5000);
+        liftUp();
+        sleep(1000);
+        liftDown();
+        sleep(5000);
+        bucketMove(0);
+        sleep(2500);
+        bucketMove(0.45);
+        sleep(2500);
+        bucketMove(0.5);
+        sleep(2500);
+        bucketMove(1);
+
+        telemetry.addData("Path", "Complete");
+        telemetry.update();
+    }
+
+    /*
+     *  Method to perform a relative move, based on encoder counts.
+     *  Encoders are not reset as the move is based on the current position.
+     *  Move will stop if any of three conditions occur:
+     *  1) Move gets to the desired position
+     *  2) Move runs out of time
+     *  3) Driver stops the opmode running.
+     */
+    public void encoderDrive(double speed,
+                             double leftInches, double rightInches,
+                             double timeoutS) {
+        int newLeftTarget;
+        int newRightTarget;
+        int newLeftBackTarget;
+        int newRightBackTarget;
+
+        // Ensure that the opmode is still active
+        if (opModeIsActive()) {
+
+            // Determine new target position, and pass to motor controller
+            newLeftTarget = robot.leftDrive.getCurrentPosition() + (int)(leftInches * COUNTS_PER_INCH);
+            newRightTarget = robot.rightDrive.getCurrentPosition() + (int)(rightInches * COUNTS_PER_INCH);
+            newLeftBackTarget = robot.leftBackDrive.getCurrentPosition() + (int) (leftInches * COUNTS_PER_INCH);
+            newRightBackTarget = robot.rightBackDrive.getCurrentPosition() + (int) (rightInches * COUNTS_PER_INCH);
+            robot.leftDrive.setTargetPosition(newLeftTarget);
+            robot.rightDrive.setTargetPosition(newRightTarget);
+            robot.leftBackDrive.setTargetPosition(newLeftBackTarget);
+            robot.rightBackDrive.setTargetPosition(newRightBackTarget);
+
+            // Turn On RUN_TO_POSITION
+            robot.leftDrive.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            robot.rightDrive.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            robot.leftBackDrive.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            robot.rightBackDrive.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+
+            // reset the timeout time and start motion.
+            runtime.reset();
+            robot.leftDrive.setPower(Math.abs(speed));
+            robot.rightDrive.setPower(Math.abs(speed));
+            robot.leftBackDrive.setPower(Math.abs(speed));
+            robot.rightBackDrive.setPower(Math.abs(speed));
+
+            // keep looping while we are still active, and there is time left, and both motors are running.
+            // Note: We use (isBusy() && isBusy()) in the loop test, which means that when EITHER motor hits
+            // its target position, the motion will stop.  This is "safer" in the event that the robot will
+            // always end the motion as soon as possible.
+            // However, if you require that BOTH motors have finished their moves before the robot continues
+            // onto the next step, use (isBusy() || isBusy()) in the loop test.
+            while (opModeIsActive() &&
+                    (runtime.seconds() < timeoutS) &&
+                    (robot.leftDrive.isBusy() && robot.rightDrive.isBusy()) &&
+                    (robot.leftBackDrive.isBusy() && robot.rightBackDrive.isBusy())) {
+
+                // Display it for the driver.
+                telemetry.addData("Path1",  "Running to F: %7d :%7d , B: %7d :%7d", newLeftTarget,  newRightTarget, newLeftBackTarget, newRightBackTarget);
+                telemetry.addData("Path2",  "Running at F: %7d :%7d , B: %7d :%7d",
+                        robot.leftDrive.getCurrentPosition(),
+                        robot.rightDrive.getCurrentPosition(),
+                        robot.leftBackDrive.getCurrentPosition(),
+                        robot.rightBackDrive.getCurrentPosition());
+                telemetry.addData("Version", version.aversion);
+                telemetry.update();
+            }
+
+            // Stop all motion;
+            robot.leftDrive.setPower(0);
+            robot.rightDrive.setPower(0);
+            robot.leftBackDrive.setPower(0);
+            robot.rightBackDrive.setPower(0);
+
+            // Turn off RUN_TO_POSITION
+            robot.leftDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+            robot.rightDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+            robot.leftBackDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+            robot.rightBackDrive.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+
+            //  sleep(250);   // optional pause after each move
+        }
+    }
+    public void hookDrive (double speed, double inches, double timeoutS) {
+        int newHookTarget;
+        if (opModeIsActive()) {
+            newHookTarget = robot.hook.getCurrentPosition() + (int) (inches * COUNTS_PER_INCH);
+            robot.hook.setTargetPosition(newHookTarget);
+            robot.hook.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            runtime.reset();
+            robot.hook.setPower(speed);
+            while (opModeIsActive() && robot.hook.isBusy() && (runtime.seconds() < timeoutS)) {
+                telemetry.addData("Hook going to", newHookTarget);
+                telemetry.addData("Hook at", robot.hook.getCurrentPosition());
+                telemetry.update();
+            }
+            robot.hook.setPower(0);
+            robot.hook.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        }
+    }
+    public void intakeDrive (double speed, double inches, double timeoutS) {
+        int newIntakeTarget;
+        if (opModeIsActive()) {
+            newIntakeTarget = robot.intake.getCurrentPosition() + (int) (inches * COUNTS_PER_INCH);
+            robot.intake.setTargetPosition(newIntakeTarget);
+            robot.intake.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            runtime.reset();
+            robot.intake.setPower(speed);
+            while (opModeIsActive() && robot.intake.isBusy() && (runtime.seconds() < timeoutS)) {
+                telemetry.addData("Intake going to", newIntakeTarget);
+                telemetry.addData("Intake at", robot.intake.getCurrentPosition());
+                telemetry.update();
+            }
+            robot.intake.setPower(0);
+            robot.intake.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        }
+    }
+    public void liftDrive (double speed, double inches, double timeoutS) {
+        int newLiftTarget;
+        if (opModeIsActive()) {
+            newLiftTarget = robot.liftMotor.getCurrentPosition() + (int) (inches * COUNTS_PER_INCH);
+            robot.liftMotor.setTargetPosition(newLiftTarget);
+            robot.liftMotor.setMode(DcMotor.RunMode.RUN_TO_POSITION);
+            runtime.reset();
+            robot.liftMotor.setPower(speed);
+            while (opModeIsActive() && robot.liftMotor.isBusy() && (runtime.seconds() < timeoutS)) {
+                telemetry.addData("Hook going to", newLiftTarget);
+                telemetry.addData("Hook at", robot.liftMotor.getCurrentPosition());
+                telemetry.update();
+            }
+            robot.liftMotor.setPower(0);
+            robot.liftMotor.setMode(DcMotor.RunMode.RUN_USING_ENCODER);
+        }
+    }
+    public void hookUp() {
+        hookDrive(DRIVE_SPEED, 5, 5.0);
+    }
+    public void hookDown() {
+        hookDrive(DRIVE_SPEED, -5, 7.5);
+    }
+    public void intakeOn(double durationS) {
+        intakeDrive(DRIVE_SPEED, 5000, durationS);
+    }
+    public void liftUp() {
+        liftDrive(DRIVE_SPEED, 10, 5);
+    }
+    public void liftDown() {
+        liftDrive(DRIVE_SPEED, -10, 5);
+    }
+    public void bucketMove(double pos) {
+        robot.bucket.setPosition(pos);
+    }
+    public void movement() {
+        encoderDrive(DRIVE_SPEED, 24, 24, 5.0); //Forward 24 inches w/5s Timeout
+        encoderDrive(DRIVE_SPEED, -24, -24, 5.0); //Backward 24 inches w/5s Timeout
+        encoderDrive(TURN_SPEED, -12, 12, 4.0); //Turn left 12 inches w/4s Timeout
+        encoderDrive(TURN_SPEED, 24, -24, 8.0); //Turn right 24 inches w/8s Timeout (Effective 12,R,4)
+        encoderDrive(TURN_SPEED, 12, -12, 4.0); //Turn left 12 inches w/4s Timeout
+    }
+}
